@@ -1,0 +1,15 @@
+<?php
+
+/**
+ * Samogitian stub language file
+ * Inherits Lithuanian
+ *
+ * @package MediaWiki
+ * @subpackage Internationalisation
+ * @author Rob Church <robchur@gmail.com>
+ */
+ 
+require_once( 'LanguageLt.php' );
+class LanguageBat_smg extends LanguageLt { }
+
+?>
